# ttutil

./: CMakeLists.txt  LICENSE.txt  README.org
standard/: CMakeLists.txt  Makefile  decdou.for  decrea.for  dectim.for  fopeng.for  ifindi.for  messini.f90  outar2.for  outdat.for  outplt.for  outsel.for  rddata.for  rdmachin.inc  recread.for  recread.inc  recreadi.for  recreadt.for  swpi4.for  ttuver.for  ver4_21.for  warning.for  wradou.for  wratim.for  wrsdou.for  wrstim.for
