set(TTUTIL_SRCS

modules/ttutil.f90
modules/ttutilprefs.f90

addinf.for
addint.for
addrea.for
addref.for
addstf.for
addstr.for
ambusy.for
copfl2.for
decchk.for
decdou.for
decint.for
decrea.for
decrec.for
dectim.for
delfil.for
dtardp.for
dtdpar.for
dtdpst.for
dtfsecmp.for
dtfsedp.for
dtleap.for
dtnow.f90
dtsys.for
entcha.for
entdch.for
entddo.for
entdin.for
entdou.for
entdre.for
entdti.for
entdyn.for
enthlp.for
entint.for
entrea.for
enttim.for
entyno.for
extens.for
fatalerr.f90
flexist.for
flname.for
fopeng.for
fopens.for
getrec.for
getun.for
getun2.for
ifindc.f90
ifindi.for
istart.for
iunifl.for
lint.for
lowerc.for
messini.f90
messinq.f90
messwrt.for
movavr.for
notnul.for
openlogf.f90
outar2.for
outcom.for
outdat.for
outplt.for
outsel.for
parsword.for
rchrsrc.for
rdacha.for
rdador.for
rdadou.for
rdainr.for
rdaint.for
rdalog.for
rdarea.for
rdarer.for
rdatim.for
rddata.for
rddtmp.for
rderr.for
rderri.for
rdfcha.for
rdfdor.for
rdfdou.for
rdfinr.for
rdfint.for
rdflog.for
rdfrea.for
rdfrer.for
rdfrom.for
rdftim.for
rdinar.for
rdindt.for
rdindx.for
rdinit.for
rdinlv.for
rdinne.for
rdinqr.for
rdinqr2.for
rdinqr3.for
rdlex.for
rdmcha.for
rdmdef.for
rdmdou.for
rdmint.for
rdmlog.for
rdmrea.for
rdmtim.for
rdpars.for
rdscha.for
rdsctb.for
rdsdor.for
rdsdou.for
rdsets.for
rdsinr.for
rdsint.for
rdslog.for
rdsrea.for
rdsrer.for
rdstim.for
rdtmp1.for
rdtmp2.for
reaand.for
reanor.for
recread.for
recreadi.for
recreadt.for
remove.for
sfindg.for
sortch.for
sortin.for
str_copy.for
swpi4.for
ttuver.for
unifl.for
upperc.f90
usedun.for
ver4_21.for
warning.for
words.for
wracha.for
wradou.for
wraint.for
wralog.for
wrarea.for
wratim.for
wrinit.for
wrscha.for
wrsdou.for
wrsint.for
wrslog.for
wrsrea.for
wrstim.for
)

add_library(ttutil SHARED ${TTUTIL_SRCS})

export(TARGETS ttutil FILE ttutil-config.cmake)
